--- a/archivers/file-roller/Makefile
+++ b/archivers/file-roller/Makefile
@@ -1,13 +1,13 @@
 PORTNAME=	file-roller
-PORTVERSION=	3.42.0
-PORTREVISION=	1
+PORTVERSION=	44.5
 PORTEPOCH=	1
 CATEGORIES=	archivers gnome
-MASTER_SITES=	GNOME
+MASTER_SITES=	GNOME/sources/${PORTNAME}/${PORTVERSION:C/^([0-9]+)\..*/\1/}
 DIST_SUBDIR=	gnome
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Archive manager for zip files, tar, etc
+WWW=		https://wiki.gnome.org/Apps/FileRoller
 
 LICENSE=	gpl2
 LICENSE_FILE=	${WRKSRC}/COPYING
@@ -15,14 +15,16 @@ LICENSE_FILE=	${WRKSRC}/COPYING
 BUILD_DEPENDS=	itstool:textproc/itstool
 LIB_DEPENDS=	libjson-glib-1.0.so:devel/json-glib \
 		libnotify.so:devel/libnotify \
-		libhandy-1.so:x11-toolkits/libhandy
+		libhandy-1.so:x11-toolkits/libhandy \
+		libportal.so:deskutils/libportal \
+		libportal-gtk4.so:deskutils/libportal-gtk4
 RUN_DEPENDS=	gtar:archivers/gtar
 
 PORTSCOUT=	limitw:1,even
 
 USES=		cpe desktop-file-utils gettext gnome libarchive localbase \
-		meson pkgconfig python:3.5+,build tar:xz
-USE_GNOME=	cairo gdkpixbuf2 gtk30
+		meson pkgconfig python:build tar:xz
+USE_GNOME=	cairo gdkpixbuf gtk40 libadwaita
 USE_LDCONFIG=	yes
 MESON_ARGS=	-Dpackagekit=false
 BINARY_ALIAS=	python3=${PYTHON_VERSION}
@@ -40,7 +42,7 @@ OPTIONS_GROUP_FORMATS=	7ZIP ARJ LZO RAR ZIP
 FORMATS_DESC=	Additional compression formats support
 
 7ZIP_DESC=	7zip archive support
-7ZIP_RUN_DEPENDS=	7z:archivers/p7zip
+7ZIP_RUN_DEPENDS=	7zz:archivers/7-zip
 
 ARJ_DESC=	ARJ archive support
 ARJ_RUN_DEPENDS=	arj:archivers/arj
@@ -62,5 +64,9 @@ post-patch:
 	@${REINPLACE_CMD} -e 's|%%LOCALBASE%%|${LOCALBASE}|g' \
 		${WRKSRC}/src/fr-command-tar.c \
 		${WRKSRC}/src/fr-command-zip.c
+	@${REINPLACE_CMD} -e 's|"7z"|"7zz"|g' \
+		${WRKSRC}/src/fr-archive-libarchive.c \
+		${WRKSRC}/src/fr-command-7z.c \
+		${WRKSRC}/src/fr-command-tar.c
 
 .include <bsd.port.mk>
