--- a/archivers/rar/Makefile
+++ b/archivers/rar/Makefile
@@ -1,36 +1,36 @@
 PORTNAME=	rar
-PORTVERSION=	6.0.2
+PORTVERSION=	7.11
 PORTEPOCH=	3
 CATEGORIES=	archivers
-MASTER_SITES=	https://rarlab.com/rar/
-DISTNAME=	rarbsd${ARCH:S|amd64|-x64|:S|i386||}-${PORTVERSION}
+MASTER_SITES=	https://www.rarlab.com/rar/
+DISTNAME=	rarbsd-x64-${PORTVERSION:R}${PORTVERSION:E}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	File archiver (binary port)
+WWW=		https://www.rarlab.com/
 
 LICENSE=	RAR
 LICENSE_NAME=	RAR license
 LICENSE_FILE=	${WRKSRC}/license.txt
-LICENSE_PERMS=	dist-mirror pkg-mirror auto-accept
+# Only unmodified original package can be distributed
+LICENSE_PERMS=	auto-accept dist-mirror pkg-mirror
 
-ONLY_FOR_ARCHS=	amd64 i386
+ONLY_FOR_ARCHS=	amd64
+
+USES=		cpe
 
 NO_BUILD=	yes
 WRKSRC=		${WRKDIR}/rar
 
-PLIST_FILES=	bin/rar etc/rarfiles.lst lib/default.sfx man/cat1/rar.1.gz
+PLIST_FILES=	bin/rar etc/rarfiles.lst lib/default.sfx share/man/cat1/rar.1.gz
+
+CPE_VENDOR=	rarlab
 
 do-install:
+	${MKDIR} ${PREFIX}/share/man/cat1
 	${INSTALL_PROGRAM} ${WRKSRC}/rar ${STAGEDIR}${PREFIX}/bin
 	${INSTALL_DATA} ${WRKSRC}/rarfiles.lst ${STAGEDIR}${PREFIX}/etc
 	${INSTALL_DATA} ${WRKSRC}/default.sfx ${STAGEDIR}${PREFIX}/lib
-	${INSTALL_MAN} ${WRKSRC}/rar.txt ${STAGEDIR}${PREFIX}/man/cat1/rar.1
-
-# maintainer section:
-
-.if defined(MAINTAINER_MODE)
-DISTFILES=	rarbsd-${PORTVERSION}.tar.gz \
-		rarbsd-x64-${PORTVERSION}.tar.gz
-.endif
+	${INSTALL_MAN} ${WRKSRC}/rar.txt ${STAGEDIR}${PREFIX}/share/man/cat1/rar.1
 
 .include <bsd.port.mk>
