--- a/archivers/minizip-ng/Makefile
+++ b/archivers/minizip-ng/Makefile
@@ -1,24 +1,33 @@
 PORTNAME=	minizip-ng
-DISTVERSION=	3.0.4
+DISTVERSION=	4.0.10
 CATEGORIES=	archivers
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Fork of the popular minizip found in the zlib distribution
+WWW=		https://github.com/zlib-ng/minizip-ng
 
 LICENSE=	zlib
+LICENSE_FILE=	${WRKSRC}/LICENSE
 
-LIB_DEPENDS=	libzstd.so:archivers/zstd
+LIB_DEPENDS=	libz-ng.so:archivers/zlib-ng \
+		libzstd.so:archivers/zstd
 
-USES=		cmake:testing iconv:wchar_t pkgconfig ssl
-USE_LDCONFIG=	yes
+USES=		cmake:testing iconv pathfix pkgconfig ssl
 USE_GITHUB=	yes
 GH_ACCOUNT=	zlib-ng
-
-CMAKE_ON=	BUILD_SHARED_LIBS
-CMAKE_ARGS=	-DMZ_PROJECT_SUFFIX=-ng \
-		-DCMAKE_INSTALL_INCLUDEDIR=${LOCALBASE}/include/minizip-ng
-#CMAKE_TESTING_ON=	MZ_BUILD_TEST MZ_BUILD_UNIT_TEST
+USE_LDCONFIG=	yes
 
 NO_TEST=	yes
+
+CMAKE_ARGS=	-DCMAKE_INSTALL_INCLUDEDIR=${LOCALBASE}/include/ \
+		-DMZ_LIB_SUFFIX=-ng
+CMAKE_ON=	BUILD_SHARED_LIBS CMAKE_DISABLE_FIND_PACKAGE_ZLIB
+CMAKE_TESTING_ON=	MZ_BUILD_TEST MZ_BUILD_UNIT_TEST
+
+PLIST_SUB+=	VERSION="${DISTVERSION}"
+
+post-install:
+	${INSTALL_DATA} ${FILESDIR}/mz_compat.h \
+		${STAGEDIR}${PREFIX}/include/minizip-ng/
 
 .include <bsd.port.mk>
