--- a/textproc/scdoc/Makefile
+++ b/textproc/scdoc/Makefile
@@ -1,10 +1,11 @@
 PORTNAME=	scdoc
-DISTVERSION=	1.11.1
+DISTVERSION=	1.11.3
 CATEGORIES=	textproc
 MASTER_SITES=	https://git.sr.ht/~sircmpwn/${PORTNAME}/archive/${DISTVERSIONFULL}${EXTRACT_SUFX}?dummy=/
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Small man page generator
+WWW=		https://git.sr.ht/~sircmpwn/scdoc
 
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/COPYING
@@ -12,7 +13,7 @@ LICENSE_FILE=	${WRKSRC}/COPYING
 FAKE_OPTS=	trueprefix
 
 USES=		gmake
-MAKE_ENV=	PCDIR='$$(_INSTDIR)/libdata/pkgconfig'
+MAKE_ENV=	PCDIR='$$(PREFIX)/libdata/pkgconfig'
 TEST_TARGET=	check
 PLIST_FILES=	bin/${PORTNAME} \
 		libdata/pkgconfig/${PORTNAME}.pc \
