--- a/devel/glade/Makefile
+++ b/devel/glade/Makefile
@@ -1,16 +1,13 @@
 PORTNAME=	glade
-PORTVERSION=	3.38.2
-PORTREVISION=	1
+PORTVERSION=	3.40.0
+PORTREVISION=	5
 CATEGORIES=	devel gnome
 MASTER_SITES=	GNOME
-DIST_SUBDIR=	gnome3
-
-PATCH_SITES=	https://gitlab.gnome.org/GNOME/${PORTNAME}/-/commit/
-PATCHFILES+=	04ba6f96.patch:-p1 \
-		61304b2e.patch:-p1
+DIST_SUBDIR=	gnome
 
 MAINTAINER=	ports@MidnightBSD.org
-COMMENT=	User interface builder for GTK+ 3
+COMMENT=	User interface builder for GTK 3
+WWW=		https://glade.gnome.org/
 
 LICENSE=	gpl2 lgpl2.1
 LICENSE_COMB=	multi
@@ -39,13 +36,13 @@ GJS_MESON_ENABLED=	gjs
 GJS_LIB_DEPENDS=	libgjs.so:lang/gjs
 
 PYTHON_MESON_ENABLED=	python
-PYTHON_USES=		python:3.4+
+PYTHON_USES=		python
 PYTHON_USE=		GNOME=pygobject3
 
 WEBKIT_DESC=		Webkit glade support
 WEBKIT_MESON_ENABLED=	webkit2gtk
 WEBKIT_LIB_DEPENDS=	libsoup-2.4.so:devel/libsoup \
-			libwebkit2gtk-4.0.so:www/webkit2-gtk3
+			libwebkit2gtk-4.0.so:www/webkit2-gtk@40
 
 NO_TEST=	yes
 
